--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#1A76A8</color>
     <color name="colorPrimaryDark">#0F455E</color>
-    <color name="colorAccent">#2388BD</color>
+    <color name="colorAccent">#0099e5</color>
 </resources>
