Some changes in ui and in socket connection

--- a/app/src/main/res/layout/message_fragment.xml
+++ b/app/src/main/res/layout/message_fragment.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#d6e4ef"
+    android:windowSoftInputMode="stateVisible|adjustResize"
     tools:context=".ui.history.HistoryFragment">
 
     <androidx.recyclerview.widget.RecyclerView
