--- a/app/src/main/res/layout/received_message_recycle_view_item.xml
+++ b/app/src/main/res/layout/received_message_recycle_view_item.xml
@@ -37,7 +37,7 @@
         android:textSize="11sp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/message"
         app:layout_constraintTop_toBottomOf="@+id/message" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
