--- a/app/src/main/res/layout/sent_message_recycle_view_item.xml
+++ b/app/src/main/res/layout/sent_message_recycle_view_item.xml
@@ -37,7 +37,7 @@
         android:textSize="11sp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/message"
         app:layout_constraintTop_toBottomOf="@+id/message"
         app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
